[maven-release-plugin] prepare release juddi-style-parent-1.0
git-svn-id: https://svn.apache.org/repos/asf/webservices/juddi/styles/trunk@908801 13f79535-47bb-0310-9956-ffa450edef68

--- a/docbook/juddi-docbook-xslt/pom.xml
+++ b/docbook/juddi-docbook-xslt/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.apache.juddi</groupId>
 		<artifactId>juddi-style-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0</version>
 	</parent>
 	<artifactId>juddi-docbook-xslt</artifactId>
 	<packaging>jar</packaging>
