--- a/docbook/juddi-docbook-style/pom.xml
+++ b/docbook/juddi-docbook-style/pom.xml
@@ -4,7 +4,7 @@
   <parent>
 	<groupId>org.apache.juddi</groupId>
 	<artifactId>juddi-style-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
   </parent>
   <artifactId>juddi-docbook-style</artifactId>
   <packaging>jdocbook-style</packaging>
