--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<packaging>pom</packaging>
 	<groupId>org.apache.juddi</groupId>
 	<artifactId>juddi-style-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>Apache jUDDI_v3 Style Parent</name>
 	<description>Site and Docbook styles for the jUDDI project</description>
 	<url>http://ws.apache.org/juddi/</url>
