--- a/docbook/juddi-docbook-xslt/pom.xml
+++ b/docbook/juddi-docbook-xslt/pom.xml
@@ -3,9 +3,10 @@
 	<parent>
 		<groupId>org.apache.juddi</groupId>
 		<artifactId>juddi-style-parent</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>juddi-docbook-xslt</artifactId>
+  <version>1.0</version>
 	<packaging>jar</packaging>
 	<name>Apache jUDDI DocBook XSLT</name>
 	<description>The main project to transform DocBook XML into XHTML
