--- a/docbook/juddi-docbook-style/pom.xml
+++ b/docbook/juddi-docbook-style/pom.xml
@@ -4,7 +4,8 @@
   <parent>
 	<groupId>org.apache.juddi</groupId>
 	<artifactId>juddi-style-parent</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
+	<relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>juddi-docbook-style</artifactId>
   <packaging>jdocbook-style</packaging>
@@ -15,7 +16,7 @@
 			<id>repository.jboss.org</id>
 			<name>JBoss Repository</name>
 			<layout>default</layout>
-			<url>http://repository.jboss.org/maven2/</url>
+			<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -26,7 +27,7 @@
       <plugin>
         <groupId>org.jboss.maven.plugins</groupId>
         <artifactId>maven-jdocbook-style-plugin</artifactId>
-        <version>1.0.0</version>
+        <version>2.0.0</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
