--- a/docbook/juddi-docbook-xslt/pom.xml
+++ b/docbook/juddi-docbook-xslt/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.apache.juddi</groupId>
 		<artifactId>juddi-style-parent</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>juddi-docbook-xslt</artifactId>
