--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<packaging>pom</packaging>
 	<groupId>org.apache.juddi</groupId>
 	<artifactId>juddi-style-parent</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<name>Apache jUDDI_v3 Style Parent</name>
 	<description>Site and Docbook styles for the jUDDI project</description>
 	<url>http://juddi.apache.org/</url>
@@ -112,9 +112,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<connection>scm:svn:http://svn.apache.org/repos/asf/juddi/styles/tags/juddi-style-1.0.1</connection>
-		<developerConnection>scm:svn:https://svn.apache.org/repos/asf/juddi/styles/tags/juddi-style-1.0.1</developerConnection>
-		<url>http://svn.apache.org/viewcvs.cgi/juddi/styles/tags/juddi-style-1.0.1</url>
+		<connection>scm:svn:http://svn.apache.org/repos/asf/juddi/styles/trunk</connection>
+		<developerConnection>scm:svn:https://svn.apache.org/repos/asf/juddi/styles/trunk</developerConnection>
+		<url>http://svn.apache.org/viewcvs.cgi/juddi/styles/trunk</url>
 	</scm>
 	    <build>
         <pluginManagement>
