--- a/site/pom.xml
+++ b/site/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.apache.juddi</groupId>
 		<artifactId>juddi-style-parent</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 	<packaging>jar</packaging>
 	<artifactId>juddi-site-style</artifactId>
